[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Brendan Walsh", email = "brennymw@mgail.com"},
]
dependencies = [
    "flask~=2.0",
    "waitress~=2.0",
]
requires-python = ">=3.8"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
